[tool.poetry]
name = "langchain-pdf-qa"
version = "0.1.0"
description = ""
authors = ["Bharathwaaj S <bharath@testpress.in>"]
readme = "README.md"
packages = [{include = "langchain_pdf_qa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
